# fuzzy-select

./: .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  README.j2  README.md  justfile  release.toml
.github/workflows/: checks.yml  create-release-pr.yml  release-plz.yml
examples/: demo.rs
src/: lib.rs
